--- a/configs/local_dev_vm/Vagrantfile
+++ b/configs/local_dev_vm/Vagrantfile
@@ -40,7 +40,7 @@ Vagrant.configure('2') do |config|
   # NOTE: We can only mount the root of all the Rosie shares because WinNFSd
   #       has a bug with multiple shares.
   #
-  # See: https://github.com/winnfsd/vagrant-winnfsd/issues/12)
+  # See: https://github.com/winnfsd/vagrant-winnfsd/issues/12
   #
   folder_mounts.push({
     :from => '../',
