--- a/configs/local_dev_vm/Vagrantfile
+++ b/configs/local_dev_vm/Vagrantfile
@@ -20,9 +20,8 @@ Vagrant.configure('2') do |config|
     v.customize ['modifyvm', :id, '--natdnsproxy2', 'off']
     v.customize ['modifyvm', :id, '--natdnshostresolver2', 'on']
   end
-  
-  config.ssh.username = 'vagrant'
-  config.ssh.password = 'vagrant'
+
+  config.ssh.forward_agent
   config.ssh.port = 2222
   
   config.vm.network :private_network, ip: '33.33.13.37'
